# practice-fastapi-app

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml
.github/: labeler.yml  release-draft-template.yaml  release-draft-template.yml
.github/workflows/: ci.yaml  labeler.yaml  labeler.yml  release-drafter.yaml  require-pr-labels.yaml
alembic/: env.py
alembic/versions/: 2fc6d67d0ca6_for_async_changed_datetime_column_to_.py  c73a452fb157_created_posts_table.py
app/: __init__.py  config.py  database.py  encoders.py  main.py  models.py  schemas.py
app/api/: api.py  deps.py
app/api/endpoints/: meilisearch.py  posts.py
app/crud/: base.py  posts.py
app/models/: __init__.py  posts.py
app/search_sync/: indexer.py
scripts/: ruff.sh
tests/: conftest.py  test_posts.py  test_routes.py  test_simple_routes.py
tests/api/: test_posts.py  test_simple_routes.py
tests/crud/: test_posts.py
