[tool.poetry]
name = "practiceAPI"
version = "0.1.3"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
fastapi = "^0.109.2"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
ruff = "^0.2.2"
pre-commit = "^3.6.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select=["E", "F", "D", "UP", "I001", "T201", "T203"]
lint.ignore=[
  # Recommened ignores by ruff when using formatter
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D100",
  "D104",
  "D203",
  "D206",
  "D213",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
lint.exclude = ["tests/*", "alembic/versions/*"]
target-version = "py310"
fix = true
